# WindowsTestQtCpp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  credentials.zip:Zone.Identifier  docker-compose.prod.yml  docker-compose.yml  main.cpp  testQt6QMLCpp.pro.qtds
.conf/: .container  update.json
.qt/QtProject/: QtCreator.ini
.qt/QtProject/qtcreator/: cmaketools.xml  default.qws
.qt/QtProject/qtcreator/qbs/1.23.0/: qbs.conf
